All the necessary functions have been added

--- a/Chisl_Methods_Lab1/Chisl_Methods_Lab1.vcxproj
+++ b/Chisl_Methods_Lab1/Chisl_Methods_Lab1.vcxproj
@@ -127,7 +127,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="GaussMethod.cpp" />
+    <ClCompile Include="LDLT_Factorization.cpp" />
     <ClCompile Include="Main_App.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Main_Header.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
